Fixed some layout issues after applying grid to app

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     padding: 0;
     font-family: K2D, serif;
     position: relative;
+    
 }
 
 #logo {
@@ -12,11 +13,22 @@
     font-size: 60px;
     background: linear-gradient(90deg, blue, red, yellow);
     color: #FFF;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+}
+
+#app {
+    display: grid;
+    grid-template-columns: 99vw 1vw;
+    grid-template-rows: 15vh 70vh 15vh;
 }
 
 footer {
     text-align: center;
-    padding-top: 50px;
+    position: fixed;
+    bottom: 0px;
+    background-color: #FFF;
+    width: 100vw;
 }
 
 footer a {
@@ -37,10 +49,10 @@ footer a:hover {
 }
 
 #loginContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr; 
-    justify-items: center;
-    margin: 60px 0px;
+    display: flex;
+    grid-column: 1 / 3;
+    margin: 60px 0px 0px 100px;
+    justify-content: space-around;
 }
 
 .login {
@@ -62,6 +74,7 @@ footer a:hover {
     border-top: none;
     border-right: none;
     transition: width .5s;
+    padding-left: 10px;
 }
 
 .loginInput:focus {
@@ -91,23 +104,24 @@ footer a:hover {
     color: #FFF;
 }
 
-@media only screen and (max-width: 1017px) {
+@media only screen and (max-width: 1200px) {
     #loginContainer {
-        grid-template-columns: 1fr; 
-        grid-row-gap: 20px;
+        flex-wrap: wrap; 
     }
 
     .login {
         max-width: 400px;
+        margin: 0px 0px 40px 0px;
     }
 }
 
-/*CSS below is used for Rooms.js, RoomList.js components (first page after sign-in)*/
+/*CSS below is used for Rooms.js, RoomList.js, RoomCreate.js components*/
 
 #rooms {
     display: flex;
     flex-direction: column;
     width: 25vw;
+    grid-column: 1 / 3;
 }
 
 .roomList {
@@ -120,9 +134,10 @@ footer a:hover {
     text-align: left;
 }
 
-.roomList:hover {
-    background-color: #FFF;
+.roomList:hover, .roomList:focus {
+    background-color: #888;
 }
+
 
 .deleteButton {
     width: 10%;
@@ -135,7 +150,29 @@ footer a:hover {
     background-color: red;
 }
 
-#signOutButton, #addRoomButton {
-    width: 100px;
+.smallerButton {
+    max-width: 100px;
 }
 
+#userArea {
+    width: 25vw;
+    display: flex;
+    align-items: flex-end;
+    border-bottom: 2px solid #333;
+    margin-bottom: 20px;
+}
+
+#userArea p {
+    padding: 0px 20px 0px 10px;
+    font-size: 25px;
+}
+
+/*CSS below is used for Messages.js components*/
+
+#messages {
+    display: flex;
+    flex-direction: column;
+    width: 75vw;
+    background-color: #333;
+    position: absolute;
+}
